--- a/flex_box/justiy_content.css
+++ b/flex_box/justiy_content.css
@@ -1,12 +1,16 @@
-
+body{
+    background-color: darkgrey;
+}
 div{
     /* display: flex; */
     background-color: aqua;
     border-radius: 20px;
     display: flex;
-    /* margin:20px; */
+
 
     justify-content: space-around;
+    
+
     /* width:500px; */
 
 
