--- a/flex_box/flex_item_basisproperty.css
+++ b/flex_box/flex_item_basisproperty.css
@@ -1,3 +1,51 @@
-div{
+div {
     border: 20px solid green;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div h1,
+div h2,
+div h3,
+div h4 {
+    background-color: blue;
+    flex-basis: 25%;
+
+}
+
+h1 {
+
+    border: 1px solid black;
+
+}
+
+h2 {
+
+    border: 1px solid black;
+
+
+}
+
+h3 {
+
+    border: 1px solid black;
+
+}
+
+h4 {
+
+    border: 1px solid black;
+
+}
+
+h5 {
+
+    border: 1px solid black;
+
+}
+
+h6 {
+
+    border: 1px solid black;
+
 }
