--- a/flex_box/flex_item_basisproperty.css
+++ b/flex_box/flex_item_basisproperty.css
@@ -1,5 +1,5 @@
 div {
-    border: 20px solid green;
+    border: 10px solid green;
     display: flex;
     flex-wrap: wrap;
 }
@@ -13,7 +13,7 @@ div h4 {
 
 }
 
-h1 {
+/* h1 {
 
     border: 1px solid black;
 
@@ -48,4 +48,4 @@ h6 {
 
     border: 1px solid black;
 
-}
+} */
