--- a/flex_box/pratice_exercise/gues_number.css
+++ b/flex_box/pratice_exercise/gues_number.css
@@ -5,6 +5,17 @@
 }
 #container{
     text-align: center;
+    border: 3px solid black;
     margin: 40px;
     padding: 40px;
+}
+#Wrong_ANSWER{
+    color:red;
+}
+#Final_score{
+    color:green;
+}
+#submit{
+    background-color: rgb(95, 48, 20);
+    border:2px solid black;
 }
